--- a/templates/amt/sections/innhold-med-liste.hbs
+++ b/templates/amt/sections/innhold-med-liste.hbs
@@ -1,7 +1,12 @@
-{{#if deltaker.innhold.length}}
-    <ul>
-        {{#each deltaker.innhold}}
-            <li>{{this}}</li>
-        {{/each}}
-    </ul>
-{{/if}}
+<section>
+    <h2>Dette er innholdet</h2>
+    <p>{{deltakerliste.ledetekst}}</p>
+
+    {{#if deltaker.innhold.length}}
+        <ul>
+            {{#each deltaker.innhold}}
+                <li>{{this}}</li>
+            {{/each}}
+        </ul>
+    {{/if}}
+</section>
