--- a/templates/amt/hovedvedtak.hbs
+++ b/templates/amt/hovedvedtak.hbs
@@ -1,9 +1,9 @@
 {{#eq deltakerliste.tiltakskode "VARIG_TILRETTELAGT_ARBEID_SKJERMET"}}
-    {{> amt/hovedvedtak-VTA}}
+    {{> amt/hovedvedtak-vta}}
 {{/eq}}
 
 {{#eq deltakerliste.tiltakskode "DIGITALT_OPPFOLGINGSTILTAK"}}
-    {{> amt/hovedvedtak-DIGOPPF}}
+    {{> amt/hovedvedtak-digoppf}}
 {{/eq}}
 
 {{#not_eq deltakerliste.tiltakskode "VARIG_TILRETTELAGT_ARBEID_SKJERMET"}}
