--- a/templates/amt/hovedvedtak.hbs
+++ b/templates/amt/hovedvedtak.hbs
@@ -1,84 +1,13 @@
-<!DOCTYPE html>
-<html lang="no">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="description" content="Vedtak om tiltak"/>
-    <meta name="author" content="amt-pdfgen"/>
-    <meta name="subject" content="Vedtak"/>
+{{#eq deltakerliste.tiltakskode "VARIG_TILRETTELAGT_ARBEID_SKJERMET"}}
+    {{> amt/hovedvedtak-vta}}
+{{/eq}}
 
-    {{#block 'amt/style' }}
-    {{/block}}
+{{#eq deltakerliste.tiltakskode "DIGITALT_OPPFOLGINGSTILTAK"}}
+    {{> amt/hovedvedtak-digoppf}}
+{{/eq}}
 
-    <title>Vedtak om tiltaksdeltakelse</title>
-
-</head>
-<body>
-    <div id="footer">
-        <span class="sidetall">side <span id="pagenumber"></span> av <span id="pagecount"></span></span>
-    </div>
-    {{> amt/header}}
-    <main>
-        <section>
-            <h1>{{deltakerliste.navn}}</h1>
-            <p>Du er meldt på arbeidsmarkedstiltaket: {{deltakerliste.navn}}. Når arrangøren har en ledig plass så vil de ta kontakt med deg for å avtale oppstart.</p>
-            {{#if this.begrunnelseFraNav}}
-                <br />
-                <p>Begrunnelse:</p>
-                <p>{{this.begrunnelseFraNav}}</p>
-            {{/if}}
-        </section>
-
-        <section>
-            <h2>Dette er innholdet</h2>
-            <p>{{deltakerliste.ledetekst}}</p>
-
-            {{#if deltaker.innhold.length}}
-            <ul>
-                {{#each deltaker.innhold}}
-                <li>{{this}}</li>
-                {{/each}}
-            </ul>
-            {{/if}}
-        </section>
-
-        {{#if deltaker.bakgrunnsinformasjon}}
-        <section>
-            <h2>Bakgrunnsinfo</h2>
-            <p>{{deltaker.bakgrunnsinformasjon}}</p>
-        </section>
-        {{/if}}
-
-        {{#if deltaker.deltakelsesmengdeTekst}}
-            <section>
-                <h2>Deltakelsesmengde</h2>
-                <p>{{deltaker.deltakelsesmengdeTekst}}</p>
-            </section>
-        {{/if}}
-
-        {{> amt/hvaerdette}}
-
-        <section>
-            <h2>Du har rett til å klage</h2>
-            <p>Du kan klage hvis du ikke ønsker å delta, er uenig i endringer på deltakelsen eller du ønsker et annet arbeidsmarkedstiltak. Fristen for å klage er seks uker etter du mottok informasjonen. Les mer om retten til å klage på <a href="https://www.nav.no/klage">nav.no/klage</a></p>
-        </section>
-
-        <section>
-            <h2>Dette deles med arrangøren</h2>
-            <p>NAV samarbeider med {{deltakerliste.arrangor.navn}}. Arrangøren behandler opplysninger på vegne av NAV.</p>
-            <ul>
-                <li>Navn og kontaktinformasjonen til NAV-veilederen din</li>
-                <li>Innholdet og bakgrunnsinformasjonen i påmeldingen</li>
-                <li>Navn og fødselsnummer</li>
-                <li>Telefonnummer og e-postadresse</li>
-                {{#if deltaker.adresseDelesMedArrangor}}
-                <li>Adresse</li>
-                {{/if}}
-            </ul>
-        </section>
-
-        {{> amt/sporsmal}}
-
-        {{> amt/avsender}}
-    </main>
-</body>
-</html>
+{{#not_eq deltakerliste.tiltakskode "VARIG_TILRETTELAGT_ARBEID_SKJERMET"}}
+    {{#not_eq deltakerliste.tiltakskode "DIGITALT_OPPFOLGINGSTILTAK"}}
+        {{> amt/hovedvedtak-standard}}
+    {{/not_eq}}
+{{/not_eq}}
