--- a/templates/amt/sections/header.hbs
+++ b/templates/amt/sections/header.hbs
@@ -1,5 +1,5 @@
 <header>
-    <img class="logo" alt="NAV logo" src="{{ image "Navlogo.png" }}" />
+    <img class="logo" alt="NAV logo" src="{{ image "NAV-logo.svg" }}" />
     <div class="personalia-wrapper">
         <table class="personalia-table">
             <tr>
