--- a/templates/amt/style.hbs
+++ b/templates/amt/style.hbs
@@ -32,11 +32,11 @@
         line-height: 26px;
     }
     .logo {
-        height: 2.9rem;
+        height: 16px;
     }
     .personalia-table {
         float: left;
-        padding-top: 2rem;
+        padding-top: 48px;
     }
     .personalia-table th {
         font-weight: normal;
