--- a/templates/amt/style.hbs
+++ b/templates/amt/style.hbs
@@ -1,15 +1,17 @@
 <style>
     @page {
-        margin: 2cm;
+        margin: 64px;
+        margin-bottom: 74px;
         @bottom-left {
             content: element(footer);
         }
     }
     * {
-        font-family: "Source Sans Pro", SourceSansPro, Source_Sans_Pro, ArialSystem, sans-serif;
-        font-size: 16px;
-        line-height: 24px;
+        font-family: "Source Sans 3", SourceSans3, Source_Sans_3, ArialSystem, sans-serif;
+        font-size: 11px;
+        line-height: 16px;
         box-sizing: border-box;
+        margin-bottom: 26px;
     }
     section {
         page-break-inside: avoid;
@@ -19,17 +21,17 @@
         margin-bottom: 3rem;
     }
     h1 {
-        margin-bottom: 1rem;
-        font-size: 24px;
-        line-height: 26px;
+        margin-bottom: 26px;
+        font-size: 16px;
+        line-height: 20px;
         font-weight: 700;
     }
     h2 {
-        margin-top: 1.25rem;
-        margin-bottom: 0;
-        font-size: 21px;
+        margin-top: 26px;
+        margin-bottom: 6px;
+        font-size: 13px;
         font-weight: 700;
-        line-height: 26px;
+        line-height: 16px;
     }
     .logo {
         height: 16px;
@@ -47,7 +49,8 @@
         padding-top: 63px;
     }
     .avsender {
-        padding-top: 3rem;
+        padding-top: 32px;
+        padding-bottom: 40px;
     }
     .forslag {
         padding-top: 0.5rem;
