mindre footer og fiksa avstand på p

--- a/templates/amt/sections/begrunnelse-fra-nav.hbs
+++ b/templates/amt/sections/begrunnelse-fra-nav.hbs
@@ -1,5 +1,5 @@
 {{#if this.begrunnelseFraNav}}
     <br />
-    <p>Begrunnelse:</p>
+    <p class="begrunnelse">Begrunnelse:</p>
     <p>{{this.begrunnelseFraNav}}</p>
 {{/if}}
