--- a/templates/amt/style.hbs
+++ b/templates/amt/style.hbs
@@ -11,7 +11,6 @@
         font-size: 11px;
         line-height: 16px;
         box-sizing: border-box;
-        margin-bottom: 26px;
     }
     section {
         page-break-inside: avoid;
@@ -35,6 +34,9 @@
     }
     .logo {
         height: 16px;
+    }
+    .begrunnelse {
+        margin: 0;
     }
     .personalia-table {
         float: left;
@@ -64,7 +66,8 @@
     }
     #footer {
         position: running(footer);
-        font-size: 12px;
+        font-size: 9px;
+        line-height: 16px;
         margin-top: -25px;
         padding-left: 0.6cm;
     }
