Støtter linjeskift i fritekstfelter

--- a/templates/amt/sections/innhold-med-beskrivelsetekst.hbs
+++ b/templates/amt/sections/innhold-med-beskrivelsetekst.hbs
@@ -3,7 +3,7 @@
     <p>{{deltakerliste.ledetekst}}</p>
     {{#if deltaker.innholdBeskrivelse}}
         <br />
-        <p>{{deltaker.innholdBeskrivelse}}</p>
+        <p class="fritekst">{{deltaker.innholdBeskrivelse}}</p>
     {{/if}}
 
 </section>
