--- a/templates/amt/style.hbs
+++ b/templates/amt/style.hbs
@@ -35,9 +35,6 @@
     .logo {
         height: 16px;
     }
-    .begrunnelse {
-        margin: 0;
-    }
     .personalia-table {
         float: left;
         padding-top: 48px;
@@ -56,6 +53,9 @@
     }
     .forslag {
         padding-top: 0.5rem;
+    }
+    .fritekst {
+        white-space: pre-wrap;
     }
     p {
         padding: 0;
