--- a/templates/amt/sections/bakgrunnsinfo.hbs
+++ b/templates/amt/sections/bakgrunnsinfo.hbs
@@ -1,6 +1,6 @@
 {{#if deltaker.bakgrunnsinformasjon}}
     <section>
             <h2>Bakgrunnsinfo</h2>
-            <p>{{deltaker.bakgrunnsinformasjon}}</p>
+            <p class="fritekst">{{deltaker.bakgrunnsinformasjon}}</p>
     </section>
 {{/if}}
