--- a/templates/amt/sections/innhold-med-liste.hbs
+++ b/templates/amt/sections/innhold-med-liste.hbs
@@ -5,7 +5,7 @@
     {{#if deltaker.innhold.length}}
         <ul>
             {{#each deltaker.innhold}}
-                <li>{{this}}</li>
+                <li class="fritekst">{{this}}</li>
             {{/each}}
         </ul>
     {{/if}}
