--- a/templates/amt/endringsvedtak.hbs
+++ b/templates/amt/endringsvedtak.hbs
@@ -64,7 +64,7 @@
                     </div>
                 {{/if}}
                 {{#if this.bakgrunnsinformasjon}}
-                    <pv>{{this.bakgrunnsinformasjon}}</p>
+                    <p class="fritekst">{{this.bakgrunnsinformasjon}}</p>
                 {{/if}}
                 {{#if this.innhold.length}}
                     <p>{{deltakerliste.ledetekst}}</p>
