Ny template for avslag

--- a/templates/amt/style.hbs
+++ b/templates/amt/style.hbs
@@ -32,6 +32,13 @@
         font-weight: 700;
         line-height: 16px;
     }
+    h3 {
+        margin-top: 26px;
+        margin-bottom: 6px;
+        font-size: 12px;
+        font-weight: 700;
+        line-height: 16px;
+    }
     .logo {
         height: 16px;
     }
