--- a/templates/amt/innsokingsbrev.hbs
+++ b/templates/amt/innsokingsbrev.hbs
@@ -22,8 +22,8 @@
     <main>
 
         <section>
-            <h1>{{deltakerliste.navn}}</h1>
-            <p>Du er søkt inn på arbeidsmarkedstiltaket: {{deltakerliste.navn}}.</p>
+            <h1>{{this.sidetittel}}</h1>
+            <p>Du er søkt inn på arbeidsmarkedstiltaket: {{this.ingressnavn}}.</p>
         </section>
 
         {{#eq deltakerliste.tiltakskode "JOBBKLUBB"}}
