--- a/templates/amt/hovedvedtak-vta.hbs
+++ b/templates/amt/hovedvedtak-vta.hbs
@@ -19,9 +19,9 @@
     {{> amt/sections/header}}
     <main>
         <section>
-            <h1>{{deltakerliste.navn}}</h1>
+            <h1>{{this.sidetittel}}</h1>
             <p>
-                Du er meldt på arbeidsmarkedstiltaket: {{deltakerliste.navn}}.
+                Du er meldt på arbeidsmarkedstiltaket: {{this.ingressnavn}}.
                 {{deltakerliste.arrangor.navn}} avgjør om du tilbys plass. Ved tilbud om plass vil du bli ansatt.
                 Når arrangøren har en ledig plass så vil de ta kontakt med deg for å avtale oppstart.
             </p>
