--- a/templates/amt/sections/header.hbs
+++ b/templates/amt/sections/header.hbs
@@ -13,7 +13,7 @@
             </tr>
         </table>
         <div class="vedtaksdato">
-            <p>{{iso_to_long_date this.vedtaksdato}}</p>
+            <p>{{iso_to_long_date this.opprettetDato}}</p>
         </div>
     </div>
 </header>
