--- a/templates/amt/sections/overskrift-med-ingress.hbs
+++ b/templates/amt/sections/overskrift-med-ingress.hbs
@@ -1,7 +1,7 @@
 <section>
-    <h1>{{deltakerliste.navn}}</h1>
+    <h1>{{this.sidetittel}}</h1>
     <p>
-        Du er meldt på arbeidsmarkedstiltaket: {{deltakerliste.navn}}.
+        Du er meldt på arbeidsmarkedstiltaket: {{this.ingressnavn}}.
         Når arrangøren har en ledig plass så vil de ta kontakt med deg for å avtale oppstart.
     </p>
     {{> amt/sections/begrunnelse-fra-nav}}
