--- a/templates/amt/hovedvedtak.hbs
+++ b/templates/amt/hovedvedtak.hbs
@@ -3,19 +3,19 @@
 {{/eq}}
 
 {{#eq deltakerliste.tiltakskode "DIGITALT_OPPFOLGINGSTILTAK"}}
-    {{> amt/hovedvedtak-kurs}}
+    {{> amt/hovedvedtak-kurs-lopende-oppstart}}
 {{/eq}}
 
 {{#eq deltakerliste.tiltakskode "GRUPPE_FAG_OG_YRKESOPPLAERING"}}
-    {{> amt/hovedvedtak-kurs}}
+    {{> amt/hovedvedtak-kurs-lopende-oppstart}}
 {{/eq}}
 
 {{#eq deltakerliste.tiltakskode "GRUPPE_ARBEIDSMARKEDSOPPLAERING"}}
-    {{> amt/hovedvedtak-kurs}}
+    {{> amt/hovedvedtak-kurs-lopende-oppstart}}
 {{/eq}}
 
 {{#eq deltakerliste.tiltakskode "JOBBKLUBB"}}
-    {{> amt/hovedvedtak-kurs}}
+    {{> amt/hovedvedtak-kurs-lopende-oppstart}}
 {{/eq}}
 
 {{#not_eq deltakerliste.tiltakskode "VARIG_TILRETTELAGT_ARBEID_SKJERMET"}}
