Retter feil i startdato som vises i ventelistebrev

--- a/templates/amt/ventelistebrev.hbs
+++ b/templates/amt/ventelistebrev.hbs
@@ -26,7 +26,7 @@
                Dersom det åpner seg ledig plass, vil {{this.deltakerliste.arrangor.navn}} ta kontakt med deg for å avtale oppstart.
                <br />
                <br />
-               Ordinær oppstart er {{iso_to_long_date this.opprettetDato}}, men ledige plasser kan dukke opp etter dette.  Ved ledig plass ber vi om at du er tilgjengelig på kort varsel.
+               Ordinær oppstart er {{iso_to_long_date this.deltakerliste.startdato}}, men ledige plasser kan dukke opp etter dette.  Ved ledig plass ber vi om at du er tilgjengelig på kort varsel.
                <br />
                <br />
                Skulle du ikke få plass, vil søknaden avslås.</p>
