amt-distribusjon formatterer datoer

--- a/templates/amt/hovedvedtak-felles-oppstart.hbs
+++ b/templates/amt/hovedvedtak-felles-oppstart.hbs
@@ -28,9 +28,9 @@
         <section>
             <h2>Om kurset</h2>
             <p>
-                Kursets oppstartsdato: {{iso_to_long_date deltakerliste.startdato}}
+                Kursets oppstartsdato: {{deltakerliste.startdato}}
                 <br />
-                Sluttdato: {{iso_to_long_date deltakerliste.sluttdato}}
+                Sluttdato: {{deltakerliste.sluttdato}}
             </p>
         </section>
 
