Vis har fullført valg fra naav-veileder

--- a/templates/amt/endringsvedtak.hbs
+++ b/templates/amt/endringsvedtak.hbs
@@ -46,6 +46,9 @@
                 {{#if this.begrunnelseFraNav}}
                     <p>NAVs begrunnelse: {{this.begrunnelseFraNav}}</p>
                 {{/if}}
+                {{#if this.harFullfort}}
+                    <p>Er kurset fullført? {{this.harFullfort}}</p>
+                {{/if}}
                 {{#if this.vurdering}}
                     <div class="forslag">
                         <p><b>Vurdering fra arrangør</b></p>
