legf til harDeltatt likevel

--- a/templates/amt/endringsvedtak.hbs
+++ b/templates/amt/endringsvedtak.hbs
@@ -46,6 +46,9 @@
                 {{#if this.begrunnelseFraNav}}
                     <p>NAVs begrunnelse: {{this.begrunnelseFraNav}}</p>
                 {{/if}}
+                {{#if this.harDeltatt}}
+                    <p>Har personen deltatt? {{this.harDeltatt}}</p>
+                {{/if}}
                 {{#if this.harFullfort}}
                     <p>Er kurset fullført? {{this.harFullfort}}</p>
                 {{/if}}
