--- a/templates/amt/endringsvedtak.hbs
+++ b/templates/amt/endringsvedtak.hbs
@@ -46,6 +46,12 @@
                 {{#if this.begrunnelseFraNav}}
                     <p>NAVs begrunnelse: {{this.begrunnelseFraNav}}</p>
                 {{/if}}
+                {{#if this.harDeltatt}}
+                    <p>Har personen deltatt? {{this.harDeltatt}}</p>
+                {{/if}}
+                {{#if this.harFullfort}}
+                    <p>Er kurset fullført? {{this.harFullfort}}</p>
+                {{/if}}
                 {{#if this.vurdering}}
                     <div class="forslag">
                         <p><b>Vurdering fra arrangør</b></p>
@@ -65,6 +71,9 @@
                         {{#if this.forslagFraArrangor.harDeltatt}}
                             <p>Har personen deltatt? {{this.forslagFraArrangor.harDeltatt}}</p>
                         {{/if}}
+                        {{#if this.forslagFraArrangor.harFullfort}}
+                            <p>Er kurset fullført? {{this.forslagFraArrangor.harFullfort}}</p>
+                        {{/if}}
                         {{#if this.forslagFraArrangor.startdato}}
                             <p>Ny oppstartsdato: {{iso_to_nor_date this.forslagFraArrangor.startdato}}</p>
                         {{/if}}
@@ -74,7 +83,9 @@
                         {{#if this.forslagFraArrangor.deltakelsesmengdeTekst}}
                             <p>Ny deltakelsesmengde: {{this.forslagFraArrangor.deltakelsesmengdeTekst}}</p>
                         {{/if}}
-                        <p class="fritekst">Begrunnelse: {{this.forslagFraArrangor.begrunnelseFraArrangor}}</p>
+                        {{#if this.forslagFraArrangor.begrunnelseFraArrangor}}
+                            <p class="fritekst">Begrunnelse: {{this.forslagFraArrangor.begrunnelseFraArrangor}}</p>
+                        {{/if}}
                     </div>
                 {{/if}}
                 {{#if this.bakgrunnsinformasjon}}
