Sluttdato vises som string i pdf-gen

--- a/templates/amt/endringsvedtak.hbs
+++ b/templates/amt/endringsvedtak.hbs
@@ -41,7 +41,7 @@
                     <p>Endret {{iso_to_nor_date vedtaksdato}} av {{deltakerliste.arrangor.navn}}</p>
                 {{/if}}
                 {{#if this.sluttdato}}
-                    <p>Forventet sluttdato: {{iso_to_nor_date this.sluttdato}}</p>
+                    <p>{{this.sluttdato}}</p>
                 {{/if}}
                 {{#if this.begrunnelseFraNav}}
                     <p>NAVs begrunnelse: {{this.begrunnelseFraNav}}</p>
