--- a/templates/amt/hovedvedtak-felles-oppstart.hbs
+++ b/templates/amt/hovedvedtak-felles-oppstart.hbs
@@ -22,16 +22,28 @@
             <h1>{{this.deltakerliste.tittelNavn}}</h1>
             <p>
                 Du har fått plass på arbeidsmarkedstiltaket: {{this.deltakerliste.ingressNavn}}.
-                Arrangøren tar kontakt med deg for å avtale oppstart.
+                Nav eller arrangøren tar kontakt med deg for å avtale oppstart.
             </p>
         </section>
         <section>
             <h2>Om kurset</h2>
-            <p>
-                Kursets oppstartsdato: {{deltakerliste.startdato}}
-                <br />
-                Sluttdato: {{deltakerliste.sluttdato}}
-            </p>
+            {{#if deltakerliste.startdato}}
+                <p>
+                    {{#if deltakerliste.sluttdato}}
+                        Kurset starter {{iso_to_long_date deltakerliste.startdato}}, og slutter {{iso_to_long_date deltakerliste.sluttdato}}.
+                    {{/if}}
+                    {{#unless deltakerliste.sluttdato}}
+                        Kurset starter {{iso_to_long_date deltakerliste.startdato}}.
+                    {{/unless}}
+                </p>
+            {{/if}}
+
+            {{#if deltakerliste.oppmoteSted}}
+                <br/>
+                <p>
+                    Du kan møte opp her: {{deltakerliste.oppmoteSted}}.
+                </p>
+            {{/if}}
         </section>
 
         {{#eq deltakerliste.tiltakskode "JOBBKLUBB"}}
@@ -53,7 +65,7 @@
 
         <section>
             <h2>Dette deles med arrangøren</h2>
-            <p>NAV samarbeider med {{deltakerliste.arrangor.navn}}. Arrangøren behandler opplysninger på vegne av NAV.</p>
+            <p>Nav samarbeider med {{deltakerliste.arrangor.navn}}. Arrangøren behandler opplysninger på vegne av NAV.</p>
             <ul>
                 <li>Navn og kontaktinformasjonen til NAV-veilederen din</li>
                 <li>Navn og fødselsnummer</li>
