--- a/templates/amt/hovedvedtak-kurs-lopende-oppstart.hbs
+++ b/templates/amt/hovedvedtak-kurs-lopende-oppstart.hbs
@@ -34,7 +34,7 @@
 
         <section>
             <h2>Dette deles med arrangøren</h2>
-            <p>NAV samarbeider med {{deltakerliste.arrangor.navn}}. Arrangøren behandler opplysninger på vegne av NAV.</p>
+            <p>Nav samarbeider med {{deltakerliste.arrangor.navn}}. Arrangøren behandler opplysninger på vegne av NAV.</p>
             <ul>
                 <li>Navn og kontaktinformasjonen til NAV-veilederen din</li>
                 <li>Navn og fødselsnummer</li>
