--- a/templates/amt/ventelistebrev.hbs
+++ b/templates/amt/ventelistebrev.hbs
@@ -34,7 +34,7 @@
                     {{/if}}
                 {{/if}}
 
-               {{#if his.deltakerliste.oppmoteSted}}
+               {{#if this.deltakerliste.oppmoteSted}}
                    <br />
                    <br />
                    Hvis du får plass kan du møte opp her: {{this.deltakerliste.oppmoteSted}}.
