--- a/templates/amt/hovedvedtak-felles-oppstart.hbs
+++ b/templates/amt/hovedvedtak-felles-oppstart.hbs
@@ -22,7 +22,7 @@
             <h1>{{this.deltakerliste.tittelNavn}}</h1>
             <p>
                 Du har fått plass på arbeidsmarkedstiltaket: {{this.deltakerliste.ingressNavn}}.
-                Nav eller arrangøren tar kontakt med deg for å avtale oppstart.
+                Nav eller arrangøren tar kontakt med deg for å avtale når du skal begynne.
             </p>
         </section>
         <section>
