--- a/templates/amt/innsokingsbrev.hbs
+++ b/templates/amt/innsokingsbrev.hbs
@@ -64,7 +64,7 @@
 
         <section>
             <h2>Dette deles med arrangøren</h2>
-            <p>NAV samarbeider med {{deltakerliste.arrangor.navn}}. Arrangøren behandler opplysninger på vegne av NAV.</p>
+            <p>Nav samarbeider med {{deltakerliste.arrangor.navn}}. Arrangøren behandler opplysninger på vegne av Nav.</p>
             <ul>
                 <li>Navn og kontaktinformasjonen til Nav-veilederen din</li>
                 <li>Navn og fødselsnummer</li>
