--- a/templates/amt/hovedvedtak-kurs-lopende-oppstart.hbs
+++ b/templates/amt/hovedvedtak-kurs-lopende-oppstart.hbs
@@ -34,9 +34,9 @@
 
         <section>
             <h2>Dette deles med arrangøren</h2>
-            <p>Nav samarbeider med {{deltakerliste.arrangor.navn}}. Arrangøren behandler opplysninger på vegne av NAV.</p>
+            <p>Nav samarbeider med {{deltakerliste.arrangor.navn}}. Arrangøren behandler opplysninger på vegne av Nav.</p>
             <ul>
-                <li>Navn og kontaktinformasjonen til NAV-veilederen din</li>
+                <li>Navn og kontaktinformasjonen til Nav-veilederen din</li>
                 <li>Navn og fødselsnummer</li>
                 <li>Telefonnummer og e-postadresse</li>
             </ul>
