--- a/templates/amt/sections/dette-deles-med-arrangor.hbs
+++ b/templates/amt/sections/dette-deles-med-arrangor.hbs
@@ -1,8 +1,8 @@
 <section>
     <h2>Dette deles med arrangøren</h2>
-    <p>NAV samarbeider med {{deltakerliste.arrangor.navn}}. Arrangøren behandler opplysninger på vegne av NAV.</p>
+    <p>Nav samarbeider med {{deltakerliste.arrangor.navn}}. Arrangøren behandler opplysninger på vegne av Nav.</p>
     <ul>
-        <li>Navn og kontaktinformasjonen til NAV-veilederen din</li>
+        <li>Navn og kontaktinformasjonen til Nav-veilederen din</li>
         <li>Innholdet og bakgrunnsinformasjonen i påmeldingen</li>
         {{#if deltaker.adresseDelesMedArrangor}}
             <li>Adresse</li>
