--- a/templates/amt/innsokingsbrev.hbs
+++ b/templates/amt/innsokingsbrev.hbs
@@ -57,7 +57,7 @@
             {{#if deltakerliste.oppmoteSted}}
                 <br/>
                 <p>
-                    Du kan møte opp her: {{deltakerliste.oppmoteSted}}.
+                    Hvis du får plass skal du møte opp her: {{deltakerliste.oppmoteSted}}.
                 </p>
             {{/if}}
         </section>
