--- a/templates/amt/ventelistebrev.hbs
+++ b/templates/amt/ventelistebrev.hbs
@@ -37,7 +37,7 @@
                {{#if this.deltakerliste.oppmoteSted}}
                    <br />
                    <br />
-                   Hvis du får plass kan du møte opp her: {{this.deltakerliste.oppmoteSted}}.
+                   Hvis du får plass skal du møte opp her: {{this.deltakerliste.oppmoteSted}}.
                {{/if}}
 
                <br />
