ha med ommpøtested for løpende oppstart også

--- a/templates/amt/hovedvedtak-felles-oppstart.hbs
+++ b/templates/amt/hovedvedtak-felles-oppstart.hbs
@@ -40,12 +40,7 @@
                 </p>
             {{/if}}
 
-            {{#if deltakerliste.oppmoteSted}}
-                <br/>
-                <p>
-                    Du kan møte opp her: {{deltakerliste.oppmoteSted}}.
-                </p>
-            {{/if}}
+            {{> amt/sections/oppmote-sted }}
         </section>
 
         {{#eq deltakerliste.tiltakskode "JOBBKLUBB"}}
