--- a/templates/amt/sections/overskrift-med-ingress.hbs
+++ b/templates/amt/sections/overskrift-med-ingress.hbs
@@ -4,5 +4,8 @@
         Du er meldt på arbeidsmarkedstiltaket: {{this.ingressnavn}}.
         Når arrangøren har en ledig plass så vil de ta kontakt med deg for å avtale når du skal begynne.
     </p>
+
+    {{> amt/sections/oppmote-sted }}
+
     {{> amt/sections/begrunnelse-fra-nav}}
 </section>
