--- a/templates/amt/hovedvedtak-vta.hbs
+++ b/templates/amt/hovedvedtak-vta.hbs
@@ -23,8 +23,11 @@
             <p>
                 Du er meldt på arbeidsmarkedstiltaket: {{this.ingressnavn}}.
                 {{deltakerliste.arrangor.navn}} avgjør om du tilbys plass. Ved tilbud om plass vil du bli ansatt.
-                Når arrangøren har en ledig plass så vil de ta kontakt med deg for å avtale oppstart.
+                Når arrangøren har en ledig plass så vil de ta kontakt med deg for å avtale når du skal begynne.
             </p>
+
+            {{> amt/sections/oppmote-sted }}
+
             {{> amt/sections/begrunnelse-fra-nav}}
         </section>
 
