Legger til annetinnhold beskrivelsestekst i brev på kurstiltak med både løpende og felles oppstart

--- a/templates/amt/sections/innhold-med-beskrivelsetekst.hbs
+++ b/templates/amt/sections/innhold-med-beskrivelsetekst.hbs
@@ -1,8 +1,10 @@
 <section>
     <h2>Dette er innholdet</h2>
-    <p>{{deltakerliste.ledetekst}}</p>
-    {{#if deltaker.innholdBeskrivelse}}
+    {{#if deltakerliste.ledetekst}}
+        <p>{{deltakerliste.ledetekst}}</p>
         <br />
+    {{/if}}
+    {{#if deltaker.innholdBeskrivelse}}
         <p class="fritekst">{{deltaker.innholdBeskrivelse}}</p>
     {{/if}}
 
