--- a/templates/amt/hovedvedtak-felles-oppstart.hbs
+++ b/templates/amt/hovedvedtak-felles-oppstart.hbs
@@ -54,15 +54,7 @@
             {{> amt/sections/rett-til-klage}}
         {{/not_eq}}
 
-        <section>
-            <h2>Dette deles med arrangøren</h2>
-            <p>Nav samarbeider med {{deltakerliste.arrangor.navn}}. Arrangøren behandler opplysninger på vegne av Nav.</p>
-            <ul>
-                <li>Navn og kontaktinformasjonen til Nav-veilederen din</li>
-                <li>Navn og fødselsnummer</li>
-                <li>Telefonnummer og e-postadresse</li>
-            </ul>
-        </section>
+        {{> amt/sections/dette-deles-med-arrangor}}
 
         {{> amt/sections/sporsmal}}
 
