Legger til annetinnhold beskrivelsestekst i brev på kurstiltak med både løpende og felles oppstart (#120)
* Legger til annetinnhold beskrivelsestekst i brev på kurstiltak med både løpende og felles oppstart
* Tilpasser innholdsinfo for å funke uavhengig av om fritekst er oppgitt eller ikke sånn at hele overskriften skal bli borte hvis både innhold og ledetekst mangler

--- a/templates/amt/sections/innhold-med-beskrivelsetekst.hbs
+++ b/templates/amt/sections/innhold-med-beskrivelsetekst.hbs
@@ -1,9 +1,21 @@
-<section>
-    <h2>Dette er innholdet</h2>
-    <p>{{deltakerliste.ledetekst}}</p>
-    {{#if deltaker.innholdBeskrivelse}}
-        <br />
-        <p class="fritekst">{{deltaker.innholdBeskrivelse}}</p>
-    {{/if}}
+{{#if deltakerliste.ledetekst}}
+    <section>
+        <h2>Dette er innholdet</h2>
 
-</section>
+        <p>{{deltakerliste.ledetekst}}</p>
+
+        {{#if deltaker.innholdBeskrivelse}}
+            <br />
+            <p class="fritekst">{{deltaker.innholdBeskrivelse}}</p>
+        {{/if}}
+    </section>
+{{/if}}
+
+{{#unless deltakerliste.ledetekst}}
+    {{#if deltaker.innholdBeskrivelse}}
+        <section>
+            <h2>Dette er innholdet</h2>
+            <p class="fritekst">{{deltaker.innholdBeskrivelse}}</p>
+        </section>
+    {{/if}}
+{{/unless}}
