Legger til linjeskift

--- a/templates/amt/endringsvedtak.hbs
+++ b/templates/amt/endringsvedtak.hbs
@@ -95,7 +95,7 @@
                     <p>{{deltakerliste.ledetekst}}</p>
                     {{#if this.innholdBeskrivelse}}
                         <br />
-                        <p>{{this.innholdBeskrivelse}}</p>
+                        <p class="fritekst">{{this.innholdBeskrivelse}}</p>
                     {{/if}}
                     {{#unless this.innholdBeskrivelse}}
                         <ul>
