Bruker felles innholdskomponent for alle hovedvedtak og sletter maler som ikke lengre blir brukt

--- a/templates/amt/hovedvedtak-vta.hbs
+++ b/templates/amt/hovedvedtak-vta.hbs
@@ -31,7 +31,7 @@
             {{> amt/sections/begrunnelse-fra-nav}}
         </section>
 
-        {{> amt/sections/innhold-med-beskrivelsetekst}}
+        {{> amt/sections/innhold}}
 
         {{> amt/sections/bakgrunnsinfo}}
 
