--- a/templates/amt/hovedvedtak-kurs-lopende-oppstart.hbs
+++ b/templates/amt/hovedvedtak-kurs-lopende-oppstart.hbs
@@ -20,7 +20,7 @@
     <main>
         {{> amt/sections/overskrift-med-ingress}}
 
-        {{> amt/sections/innhold-med-beskrivelsetekst}}
+        {{> amt/sections/innhold}}
 
         {{> amt/sections/dette-er-et-vedtak}}
 
