--- a/templates/amt/hovedvedtak-standard.hbs
+++ b/templates/amt/hovedvedtak-standard.hbs
@@ -20,7 +20,7 @@
     <main>
         {{> amt/sections/overskrift-med-ingress}}
 
-        {{> amt/sections/innhold-med-liste}}
+        {{> amt/sections/innhold}}
 
         {{> amt/sections/bakgrunnsinfo}}
 
