--- a/templates/amt/innsokingsbrev.hbs
+++ b/templates/amt/innsokingsbrev.hbs
@@ -26,7 +26,7 @@
             <p>Du er søkt inn på arbeidsmarkedstiltaket: {{this.ingressnavn}}.</p>
         </section>
 
-        {{> amt/sections/innhold-med-beskrivelsetekst}}
+        {{> amt/sections/innhold}}
 
         <section>
             <h2>Om kurset</h2>
