--- a/templates/amt/hovedvedtak.hbs
+++ b/templates/amt/hovedvedtak.hbs
@@ -1,3 +1,5 @@
+<!--Skal slettes og isteden bruke hovedvedtak-individuell-oppfolging-->
+
 {{#eq deltakerliste.tiltakskode "VARIG_TILRETTELAGT_ARBEID_SKJERMET"}}
     {{> amt/hovedvedtak-vta}}
 {{/eq}}
