--- a/templates/amt/sections/bakgrunnsinfo.hbs
+++ b/templates/amt/sections/bakgrunnsinfo.hbs
@@ -1,5 +1,5 @@
 {{#if deltaker.bakgrunnsinformasjon}}
-    <section>
+    <section id="bakgrunnsinfo">
             <h2>Bakgrunnsinfo</h2>
             <p class="fritekst">{{deltaker.bakgrunnsinformasjon}}</p>
     </section>
