--- a/templates/amt/sections/deltakelsesmengde.hbs
+++ b/templates/amt/sections/deltakelsesmengde.hbs
@@ -1,5 +1,5 @@
 {{#if deltaker.deltakelsesmengdeTekst}}
-    <section>
+    <section id="deltakelsesmengde">
         <h2>Deltakelsesmengde</h2>
         <p>{{deltaker.deltakelsesmengdeTekst}}</p>
     </section>
