--- a/templates/amt/hovedvedtak-individuell-oppfolging.hbs
+++ b/templates/amt/hovedvedtak-individuell-oppfolging.hbs
@@ -1,4 +1,3 @@
-<!--Skal slettes og isteden bruke hovedvedtak-individuell-oppfolging-->
 <!DOCTYPE html>
 <html lang="no">
 <head>
@@ -19,7 +18,12 @@
     </div>
     {{> amt/sections/header}}
     <main>
-        {{> amt/sections/overskrift-med-ingress}}
+        {{#eq deltakerliste.tiltakskode "VARIG_TILRETTELAGT_ARBEID_SKJERMET"}}
+            {{> amt/sections/overskrift-med-ingress-vta}}
+        {{/eq}}
+        {{#not_eq deltakerliste.tiltakskode "VARIG_TILRETTELAGT_ARBEID_SKJERMET"}}
+            {{> amt/sections/overskrift-med-ingress}}
+        {{/not_eq}}
 
         {{> amt/sections/innhold}}
 
